--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:white"><body2 style="font-size:25px">
-<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button">1</button></a> Contunue_On_Trail<br>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>1</button></a> Contunue_On_Trail<br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Check-Supplies"><button>2</button></a> Check_Supplies<br>
 <a href=""><button>3</button></a> Look_At_Map<br>
 <a href=""><button>4</button></a> Change_Pace<br>
