--- a/Gregames/OregonTrail/Segment-Check-Supplies.html
+++ b/Gregames/OregonTrail/Segment-Check-Supplies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:white"><body2 style="font-size:25px">
-<p id="Oxen"></p><p id="Foodlb"></p><p id="Clothing"></p><p id="Ammo"></p><p id="Axels"></p><p id="Toungues"></p><p id="Wheels"></p><br><br><p id="money"></p><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p id="Oxen"></p><p id="Foodlb"></p><p id="Clothing"></p><p id="Ammo"></p><p id="Axels"></p><p id="Toungues"></p><p id="Wheels"></p><p id="money"></p><br><br><br><br><br>
 Press"Space"To_Contune <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button">Space</button></a>
 <script>
 var money = localStorage.getItem("money");
