--- a/Gregames/OregonTrail/Segment-Check-Supplies.html
+++ b/Gregames/OregonTrail/Segment-Check-Supplies.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><body1 style="color:white"><body2 style="font-size:25px">
 <p id="Oxen"></p><p id="Foodlb"></p><p id="Clothing"></p><p id="Ammo"></p><p id="Axels"></p><p id="Toungues"></p><p id="Wheels"></p><p id="money"></p><br><br><br><br><br>
-<body3>Press"Space"To_Contune <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button">Space</button></a></body3>
+<body3>Press"Space"To_Contune <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Space</button></a></body3>
 <script>
 var money = localStorage.getItem("money");
   document.getElementById('money').innerHTML = "money: " + money;
