--- a/Gregames/OregonTrail/Segment-Change-Pace.html
+++ b/Gregames/OregonTrail/Segment-Change-Pace.html
@@ -17,7 +17,16 @@ function Maintain() {
   localStorage.setItem("Pace", Pace);
 }
 function Steady() {
-  
+  var Pace = "steady"
+  var hr = "8"
+  Maintain();
+}
+function Tireing() {
+  var Pace = "tireing"
+  var hr = 12
+  Maintain();
+}
+function Setrenguous {
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
