--- a/Gregames/OregonTrail/Jobs-Explained.html
+++ b/Gregames/OregonTrail/Jobs-Explained.html
@@ -2,7 +2,7 @@
 Banker_From_Boston=$1600<br>
 Carpenter_From_Ohio=$800,x2score<br>
 Farmer_From_Illinois=$400,x3score<br>
-Poverty_From_Kentucky=$5,2-Oxen,10lb-Of-Food,5-Sets-Of-Clothing,15-Boxes(20)-Of-Amunition,3-Randum-Spare-Parts<br>
+Poverty_From_Kentucky=$5,2-Oxen,10lb-Of-Food,5-Sets-Of-Clothing,15-Boxes(20)-Of-Amunition,3-Randum-Spare-Parts,x4score<br><br><br><br><br>
 Press_"Space"_To_Contine<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Jobs"><button>Space</button></a></body2></body1><script>
   document.body.style.background = "black";
 </script></html>
