--- a/Gregames/OregonTrail/Hiring-An-Indian-Guide-Explained.html
+++ b/Gregames/OregonTrail/Hiring-An-Indian-Guide-Explained.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html><html><body1 style="color:white;"><body2 style="font-size:25px;"><u>Hiring_An_Indian_Guide</u><br>When_Hiring_An_Indian_Guide_You_Must_Trade_Them_Something/s_To_Guide_Your_Wagon_Acrost_The_Body_Of_Water<br>Press"Space"To_Contine<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>Space</button></a></body2></body1><script>
+<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;"><u>Hiring_An_Indian_Guide</u><br>When_Hiring_An_Indian_Guide_You_Must_Trade_Them_Something/s_To_Guide_Your_Wagon_Acrost_The_Body_Of_Water<br>Press"Space"To_Contine<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>Space</button></a></body2></body1><script>
   document.body.style.background = "black";
 </script></html>
