--- a/Gregames/OregonTrail/Jobs-Explained.html
+++ b/Gregames/OregonTrail/Jobs-Explained.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body1 style="color:white;"><body2 style="font-size:25px;">
+<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
 Banker_From_Boston=$1600<br><br>
 Carpenter_From_Ohio=$800,x2score<br><br>
 Farmer_From_Illinois=$400,x3score<br><br>
