--- a/Gregames/OregonTrail/Segment-Change-Pace.html
+++ b/Gregames/OregonTrail/Segment-Change-Pace.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px">
+<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
   <p id="pace"></p>
 <button onclick="Steady();">1</button> Steady_Pace<br>
 <button onclick="Tireing();">2</button> Tireing_Pace<br>
