--- a/Gregames/OregonTrail/Segment-Month.html
+++ b/Gregames/OregonTrail/Segment-Month.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body1 style="color:white"><body2 style="font-size:25px;">
+<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
 <button onclick="Febuary();" popovertarget="Continue" popovertargetaction="show">1</button> Febuary<br>
 <button onclick="March();" popovertarget="Continue" popovertargetaction="show">2</button> March<br>
 <button onclick="April();" popovertarget="Continue" popovertargetaction="show">3</button> April<br>
