--- a/Gregames/OregonTrail/Segment-Shop.html
+++ b/Gregames/OregonTrail/Segment-Shop.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body1 style="color:white"><body2 style="font-size:25px">
+<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px">
 <button onclick="buyOx();">1</button> Oxen<br>
 <button onclick="buyFood();">2</button> Foodlb<br>
 <button onclick="buyClothing();">3</button> Clothes<br>
