--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body1 style="color:white;">
+<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Size_Up_The_Situation</button></a>
 <script>
 var I = localStorage.getItem("I");
@@ -514,6 +514,6 @@ function Maintain() {
   localStorage.setItem("milesD", milesD);
   document.getElementById('milesD').innerHTML = milesD;
 }
-</script></body1></html><script>
+</script></body2></body1></html><script>
   document.body.style.background = "black";
 </script>
