--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -3,7 +3,7 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Check-Supplies"><button>2</button></a> Check_Supplies<br>
 <a href=""><button>3</button></a> Look_At_Map<br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Change-Pace"><button>4</button></a> Change_Pace<br>
-<a href=""><button>5</button></a> Change_Food_Rations<br>
+<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Change-Food-Rations"><button>5</button></a> Change_Food_Rations<br>
 <button popovertarget="box" popovertargetaction="show">6</button> Stop_And_Rest<br>
 <a href=""><button onclick="Day();">7</button></a> Attempt_To_Trade<br>
 <a href=""><button onclick="Day();">8</button></a> Hunt_For_Food<br>
