--- a/Gregames/OregonTrail/Segment-Change-Food-Rations.html
+++ b/Gregames/OregonTrail/Segment-Change-Food-Rations.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
 <p id="Rations"></p>
-<button onclick="Filling();">1</button> Filling<br>
-<button onclick="Meager();">2</button> Meager<br>
-<button onclick="BareBones();">3</button> Bare_Bones<br>
+<button onclick="Filling();">1</button> Filling<br><br>
+<button onclick="Meager();">2</button> Meager<br><br>
+<button onclick="BareBones();">3</button> Bare_Bones<br><br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Rations-Eplained"><button>4</button></a> Find_Out_The_Difference_Between_These_Options
 <br>
 Press""To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Space</button></a>
