--- a/The_Greg_Library/index.html
+++ b/The_Greg_Library/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head></head><body style="color:white;">
+<!DOCTYPE html><html><head></head><body style="color:Green;">
 <h style="font-size:50px;">The Greg Library</h><br>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-1-)"><button type="button">The Pink Ping Pong Ball(1)</button></a>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/Pink_Ping_Pong_Ball(-2-)"><button type="button">The Pink Ping Pong Ball(2)</button></a>
