--- a/The_Greg_Library/Cellular_Devices.html
+++ b/The_Greg_Library/Cellular_Devices.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body style="color:white;">
+<!DOCTYPE html><html><body style="color:Green;">
 <h style="font-size:50px;">The Effect Of Cell Phone Use On Student Learning</h>
 <p>  The effect of cell phone use on student learning is debatable. There is data that portrays positive and negative attributes. Therefore, you can’t be entirely sure whether it’s a good thing, or a bad thing. Until you bring all of the data together. So, let's get started!</p>
 <p>  Kids rely on their devices for just about everything, from talking to their friends to school to entertainment. Approximately 80% of the time spent on teen devices is on social media apps and video games. Some use a small amount of time on their phones doing school work,  but most use them for an easy A+. About half the time teens are so addicted to their phones that they will do just about anything to keep it(with complaints(unless that's a requirement)).</p>
