--- a/The_Greg_Library/Junk_Food.html
+++ b/The_Greg_Library/Junk_Food.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body style="color:white;">
+<!DOCTYPE html><html><body style="color:Green;">
 <h style="font-size:50px;">The Steel Trap Known As<br>“Junk Food”</h>
 <p>  Sup guys! Welcome to another essay. Today's content is about junk food, what it can do to you and how to avoid it.</p>
 <p>  Now I know that not everyone here actually cares about whether or not they get fat or mutated. But I do, so please listen, I don’t want a bunch of fat humanoid beings walking around FCV middle school, and if this goes further walking around AT ALL.</p>
