--- a/The_Greg_Library/Pink_Ping_Pong_Ball(-2-).html
+++ b/The_Greg_Library/Pink_Ping_Pong_Ball(-2-).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body style="color:white;">
+<!DOCTYPE html><html><body style="color:Green;">
 <h style="font-size:50px;">Pink Ping Pong Ball(2)<br>Dinky</h>
 <p>  Once upon a time there was a happy couple, 39 year old Bob and Bobina. They had been married for 6 years and then they had quintuplets: Bob.jr, Bobert, Boberten, Bobington and Dinky. Dinky was always somehow 6 feet wide at all times. Ever since birth he was an interesting child, he would only drink Ludacris Lime Lemonade. His brothers made fun of him for this, all 4 of them, and that's how the Whole House Water War I, Whole House Water War II and Whole House Water War III started. (Don’t Ask For Details)</p>
 <p>  The Whole House Water War’s were on Dinky’s first and second birthdays. For his third birthday he asked for carbonated Ludacris Lime Lemonade, which started Whole House Water War III. That one got bloody because of a deadly incident with a toothpick. DO NOT ASK FOR DETAILS.</p>
