--- a/The_Greg_Library/Pink_Ping_Pong_Ball(-3-).html
+++ b/The_Greg_Library/Pink_Ping_Pong_Ball(-3-).html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body style="color:white;">
+<!DOCTYPE html><html><body style="color:Green;">
 <h style="font-size:50px;">Pink Ping Pong Ball(3)<br>Simidroken-Hadle-Hadle-BobingtonII</h>
 <p>  When Cimmidrocken-Hadl-Hadl-Bobington the II was 2 years old her dad Dinky died. It was a sad experience. Her and her brothers (Bill, Binky, Phenq, Sludgy the IIII IIII II and Sookini) did not care because they had no idea what was going on.</p>
 <p>  Cimmidrocken-Hadl-Hadl-Bobington the II always loved Perplexing Purple Pancakes. They were just so purple and confusing and stale. All three things made it more of all three things. Mom would always talk about how much she and her dad had in common and that her dad liked Ludicrous Lime Lemonade which sounded absolutely disgusting, mom agreed.</p>
