--- a/The_Greg_Library/The_Dumbing_Of_America.html
+++ b/The_Greg_Library/The_Dumbing_Of_America.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><body style="color:white;">
+<!DOCTYPE html><html><body style="color:Green;">
 <h style="font-size:50px;">The Dumbing Of America</h>
 <p>  Dear reader, if you are reading this I like to write about random shenanigans. Today I'm writing about the “dumbing of america”. I think these are a few good points, but if you could give me some pointers that would be nice. Anyway, let's dive right in!</p>
 <p>  A large quantity of American citizens don’t know the difference between conspiracy/propaganda and facts(usually getting them the other way around). One point that could be considered “proof” would be how many Americans still consider global warming a hoax. And for some dumb reason during the covid-19 pandemic many Americans would refuse to take the vaccine due to propaganda, instead they would take about a T-spoon of this antiparasitic horse butt paste. Furthermore, approximately 34% of the American population disagrees with the concept of evolution. In conclusion, this is the conclusion but I'm out of stuff.</p>
