--- a/Gregames/OregonTrail/Rations-Explained.html
+++ b/Gregames/OregonTrail/Rations-Explained.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;"><u>Filling</u>_You_Consume_About_3lbs_Of_Food_Per_Person,_None_Are_Hungry<br><u>Meager</u>_Meals_Are_Small_But_Adiquate<br><u>Bare_Bones</u>_Meals_Are_Miniscule,_Evaryone_Is_Always_Hungry,_Your_Health_Suffers<br>Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>Space</button></a></body2></body1><script>
+<!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;"><br><u>Filling</u>_You_Consume_About_3lbs_Of_Food_Per_Person,_None_Are_Hungry<br><br><u>Meager</u>_Meals_Are_Small_But_Adiquate<br><br><u>Bare_Bones</u>_Meals_Are_Miniscule,_Evaryone_Is_Always_Hungry,_Your_Health_Suffers<br><br><br><br><br><br><br>Press"Space"To_Continue<a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail"><button>Space</button></a></body2></body1><script>
   document.body.style.background = "black";
 </script></html>
