--- a/Gregames/OregonTrail/Segment-Attempt-To-Trade.html
+++ b/Gregames/OregonTrail/Segment-Attempt-To-Trade.html
@@ -165,8 +165,16 @@ function Y() {
     money += numTraded;
   }
   if (Tradable) {
-    
+    localStorage.setItem("Oxen", Oxen);
+    localStorage.setItem("Foodlb", Foodlb);
+    localStorage.setItem("Clothing", Clothing);
+    localStorage.setItem("Ammo", Ammo);
+    localStorage.setItem("Axels", Axels);
+    localStorage.setItem("Toungues", Toungues);
+    localStorage.setItem("Wheels", Wheels);
+    localStorage.setItem("money", money);
   }
+  window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu");
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
