--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Size_Up_The_Situation</button></a>
-<p id="Date"></p><p id=""Wheather></p><p id="Health"></p><p id="Foodlb"></p><p id="milesLM"></p><p id="milesD"></p>
+<p id="Date"></p><p id="Wheather"></p><p id="Health"></p><p id="Foodlb"></p><p id="milesLM"></p><p id="milesD"></p>
 <script>
 var I = localStorage.getItem("I");
 var Idied = localStorage.getItem("Idied");
