--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -57,7 +57,7 @@ var FPD = localStorage.getItem("FPD");
 if (milesD = 0) {
  document.getElementById('lm').innerHTML = "Buy_Supplies";
 } else {
- document.getElementById('lm').innerHTML = "Hunt_For_Food";
+ document.getElementById('lm').innerHTML = "Hunt_For_Food(Comming_Soon!)";
 }
 function day() {
   var Pace = "stoped"
@@ -198,7 +198,7 @@ function Day() {
                         if (Wdied) {
                           if (Isick) {
                             localStorage.setItem("Idied", true);
-                            window.location.assing("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
+                            window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/YourDead");
                           } else {
                             var Randomizer = randint(1, );
                             if (Randomizer = 1) {
@@ -421,6 +421,13 @@ function kill() {
   Oxen -= 1;
   Foodlb += 150;
   Maintain();
+}
+function difine() {
+  if (milesD = 0) {
+    window.location.assign("https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Shop");
+  } else {
+    
+  }
 }
 </script></body2></body1></html><script>
   document.body.style.background = "black";
