--- a/Gregames/OregonTrail/Segment-Action-Menu.html
+++ b/Gregames/OregonTrail/Segment-Action-Menu.html
@@ -6,7 +6,7 @@
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Change-Food-Rations"><button>5</button></a> Change_Food_Rations<br>
 <button popovertarget="box" popovertargetaction="show">6</button> Stop_And_Rest<br>
 <a href=""><button onclick="Day();">7</button></a> Attempt_To_Trade<br>
-<button onclick="Day();" onclick="define();">8</button><q id="lm"></q><br>
+<button onclick="Day();" onclick="define();">8</button><b id="lm"></b><br>
 <button onclick="kill();">9</button> Kill_Ox_For_Food
 <body3 popover id="box"><input type="text" id="box"><button onclick="day();">Enter</button></body3><br>
 <script>
