--- a/The_Greg_Library/Insane_Asylum-vs-Middle_School.html
+++ b/The_Greg_Library/Insane_Asylum-vs-Middle_School.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;">
+<title>My Drive - Google Drive</title>
 <h style="font-size:50px;">Why An Insane Asylum Is A Better Learning Environment Than Middle School</h>
 <p>  Dear reader, if you are reading this I like to write about random shenanigans. Today I'm writing about how an insane asylum has a better learning environment than middle school. I think there are some good points, but you could give me some tips. Anyway, let's get started!</p>
 <p>  At an asylum there is a ø violence tolerance policy. If you want to start a fight, good luck keeping it going.  Because with a no violence policy, fights are broken up faster than they are started. If you are one of those guys who likes to start fights, you and your accomplices will be punished. Less fights, less injury, less stress.</p>
