--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;">
-<title>My Drive - Google Drive</title>
+<title>Student On Task - Please Be On Task</title>
 <h style="font-size:50px;">Welcom To Greg.com!:)</h><br>
 <a href="https://0038509gd.github.io/Greg.com/The_Greg_Library/"><button type="button">Libary</button></a>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/"><button type="button">Gregary Games</button></a>
