--- a/The_Greg_Library/Daylight_Savings_Time.html
+++ b/The_Greg_Library/Daylight_Savings_Time.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;">
-<title>My Drive - Google Drive</title>
+<title>Student On Task - Please Be On Task</title>
 <h style="font-size:50px;">Why Daylight Saving Time Is Stupid</h>
 <p>  Hey yaul! Welcome back to another essay. Today it’s all about this stupidity that's called “daylight saving time”. Anyways, let's get started on today's content.</p>
 <p>  Almost everyone hates daylight saving time, I do, my mom does, my dad does, do you? If you have an analog clock you have to reset it twice a year, every year. If you call your buddy in a country without daylight savings time and you do, good luck scheduling anything. This is just the dumbest thing.</p>
