--- a/The_Greg_Library/Rouge-Bot.html
+++ b/The_Greg_Library/Rouge-Bot.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;">
+<title>Student On Task - Please Be On Task</title>
 <h style="font-size:50px;">Rouge-Bot</h>
 <p>  Life in the lab was boring, lonely and tireing so I made an assistant. It would be a simple machine with a self destruct button programmed into it that ran off of battery, it would drive around and run entirely off of codes. When I first pressed the on button it imploded, second time 
 it exploded, third time it worked!</p>
