--- a/Gregames/index.html
+++ b/Gregames/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body style="color:Green;">
+<title>Student On Task - Please Be On Task</title>
 <h style="font-size:50px;">Gregary Games</h><br><br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/Greg-Craft"><button type="button">Greg-Craft</button></a><br><br>
 <a href="https://0038509gd.github.io/Greg.com/"><button type="button">Return</button></a>
