--- a/Gregames/OregonTrail/Segment-Attempt-To-Trade.html
+++ b/Gregames/OregonTrail/Segment-Attempt-To-Trade.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:Green;">
+<title>Student On Task - Please Be On Task</title>
 <p id="Oxen"></p><p id="Foodlb"></p><p id="Clothing"></p><p id="Ammo"></p><p id="Axels"></p><p id="Toungues"></p><p id="Wheels"></p><p id="money"></p><body2 style="font-size:25px;"><br><br><br><br><br>
 <p id="trade"></p>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>N</button></a><button onclick="Y();">Y</button>
