--- a/Gregames/OregonTrail/Segment-Change-Food-Rations.html
+++ b/Gregames/OregonTrail/Segment-Change-Food-Rations.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
+<title>Student On Task - Please Be On Task</title>
 <p id="Rations"></p>
 <button onclick="Filling();">1</button> Filling<br><br>
 <button onclick="Meager();">2</button> Meager<br><br>
