--- a/Gregames/OregonTrail/Segment-Check-Supplies.html
+++ b/Gregames/OregonTrail/Segment-Check-Supplies.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
+<title>Student On Task - Please Be On Task</title>
 <p id="Oxen"></p><p id="Foodlb"></p><p id="Clothing"></p><p id="Ammo"></p><p id="Axels"></p><p id="Toungues"></p><p id="Wheels"></p><p id="money"></p><br><br><br><br><br>
 <body3>Press"Space"To_Contune <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>Space</button></a></body3>
 <script>
