--- a/Gregames/OregonTrail/Segment-Jobs.html
+++ b/Gregames/OregonTrail/Segment-Jobs.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
+<title>Student On Task - Please Be On Task</title>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Shop"><button onclick="Banker();">1</button></a> Banker_From_Boston<br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Shop"><button onclick="Carpenter();">2</button></a> Carpenter_From_Ohio<br>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Shop"><button onclick="Farmer();">3</button></a> Farmer_From_Illinois<br>
