--- a/Gregames/OregonTrail/Segment-Names.html
+++ b/Gregames/OregonTrail/Segment-Names.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px;">
+<title>Student On Task - Please Be On Task</title>
 What_Is_The_First_Name_Of_The_Wagon_Leader?<br>
 <input type="text" id="You" value="Greg" onkeydown="you(event)"><br>
 What_Is_The_First_Name_Of_The_Wagon_Leaders_Wife?<br>
