--- a/Gregames/OregonTrail/Segment-Shop.html
+++ b/Gregames/OregonTrail/Segment-Shop.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html><body1 style="color:Green;"><body2 style="font-size:25px">
+<title>Student On Task - Please Be On Task</title>
 <button onclick="buyOx();">1</button> Oxen<br>
 <button onclick="buyFood();">2</button> Foodlb<br>
 <button onclick="buyClothing();">3</button> Clothes<br>
