--- a/Gregames/OregonTrail/index.html
+++ b/Gregames/OregonTrail/index.html
@@ -1,6 +1,14 @@
-<!DOCTYPE html><html><body1 style="color:green;"><body2 style="font-size:25px;">
+<!DOCTYPE html><html><body1 style="color:black;"><body2 style="font-size:25px;">
+<title>Student On Task - Please Be On Task</title>
 <a href="https://0038509gd.github.io/Greg.com/Gregames/OregonTrail/Segment-Action-Menu"><button>>--------------------------------------------------------------------<=>---------------------------------------------------------------------{]>Size_Up_The_Situation<[}--------------------------------------------------------------------<=>---------------------------------------------------------------------<</button></a><br>
-<body4 style="border-style:double;"><body3 style="backround-color:white;"><p id="Date" style="color:black;">Date</p><p id="Wheather" style="color:black;">Wheather</p><p id="Health" style="color:black;">Health</p><p id="Foodlb" style="color:black;">lb_Of_Food</p><p id="milesLM" style="color:black;">Mile_To_Next_Landmark</p><p id="milesD" style="color:black;">Miles_Traveled</p></body3></body4>
+<br><br><br><br><br><br><br><br><br>
+<p style="background-color:white;border-color:SaddleBrown;border-style:double;">
+<b style="color:white;">- - - - - - - - - - - - --------</b>Date: <b id="Date"></b><br>
+<b style="color:white;">- - - - - - - - - - -----</b>Wheather: <b id="Wheather"></b><br>
+<b style="color:white;">- - - - - - - - - - - - - - --</b>Health: <b id="Health"></b><br>
+<b style="color:white;">- - - - - - - - - - - </b>lb_Of_Food: <b id="Foodlb"></b><br>
+<b style="color:white;">- </b>Mile_To_Next_Landmark: <b id="milesLM"></b><br>
+<b style="color:white;">- - - - - - - - -</b>Miles_Traveled: <b id="milesD"></b></p>
 <script>
 var I = localStorage.getItem("I");
 var Idied = localStorage.getItem("Idied");
